Реализовал подхват модулей при компиляции